--- a/config/fairscape.env
+++ b/config/fairscape.env
@@ -16,7 +16,7 @@ export FAIRSCAPE_MONGO_ROCRATE_COLLECTION="rocrate"
 export FAIRSCAPE_MONGO_TOKENS_COLLECTION="tokens"
 
 # minio backend config
-export FAIRSCAPE_MINIO_URI="minio"
+export FAIRSCAPE_MINIO_URI="http://minio"
 export FAIRSCAPE_MINIO_PORT="9000"
 export FAIRSCAPE_MINIO_ACCESS_KEY="miniotestadmin"
 export FAIRSCAPE_MINIO_SECRET_KEY="miniotestsecret"
