--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,38 +1,34 @@
 # Docker Compose Spec for Local Testing of Fairscape
 services:
   setup:
-    build: "./deploy/setup/"
-    env_file: "./deploy/setup/setup.env"
+    image: ghcr.io/fairscape/setup:RELEASE.2025-02-27
+    env_file: "./config/fairscape.env"
     depends_on:
-      - ldap
       - minio
       - fairscape-api
   fairscape-worker:
-    image: ghcr.io/fairscape/mds_python:RELEASE.2025-05-21.v1
+    image: ghcr.io/fairscape/mds_python:RELEASE.2025-05-27.v1
     env_file: "./config/fairscape.env"
     command:
       - "python"
       - "fairscape_mds/worker.py"
     depends_on:
-      - ldap
       - mongo
       - minio
   fairscape-api:
-    image: ghcr.io/fairscape/mds_python:RELEASE.2025-05-21.v1
+    image: ghcr.io/fairscape/mds_python:RELEASE.2025-05-27.v1
     env_file: "./config/fairscape.env"
     ports:
       - 8080:8080
     depends_on:
-      - ldap
       - mongo
       - minio
   fairscape-frontend:
-    image: ghcr.io/fairscape/fairscapefrontendlocal:RELEASE.2025-02-12
+    image: ghcr.io/fairscape/fairscapefrontendlocal:release.2025-05-27
     ports:
       - "5173:5173"
     depends_on:
       - fairscape-api
-      - ldap
       - mongo
       - minio
 
